--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,8 @@
     <script src="/app/views/menu/MenuCtrl.js"></script>
     <script src="/app/views/feed/FeedCtrl.js"></script>
     <script src="/app/views/players/PlayersCtrl.js"></script>
+    <script src="/app/views/player/PlayerCtrl.js"></script>
+    <script src="/app/views/sell/SellCtrl.js"></script>
 
 </head>
 
