--- a/client/index.html
+++ b/client/index.html
@@ -28,11 +28,13 @@
 
     <script src="/app/views/signin/SignInCtrl.js"></script>
     <script src="/app/views/forgotpassword/ForgotPasswordCtrl.js"></script>
+    <script src="/app/views/reset/ResetCtrl.js"></script>
     <script src="/app/views/menu/MenuCtrl.js"></script>
     <script src="/app/views/feed/FeedCtrl.js"></script>
     <script src="/app/views/players/PlayersCtrl.js"></script>
     <script src="/app/views/player/PlayerCtrl.js"></script>
     <script src="/app/views/sell/SellCtrl.js"></script>
+    <script src="/app/views/transaction/TransactionCtrl.js"></script>
 
 </head>
 
