--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
     <script src="/app/views/feed/FeedCtrl.js"></script>
     <script src="/app/views/players/PlayersCtrl.js"></script>
     <script src="/app/views/player/PlayerCtrl.js"></script>
+    <script src="/app/views/addplayer/AddPlayerCtrl.js"></script>
     <script src="/app/views/sell/SellCtrl.js"></script>
     <script src="/app/views/transaction/TransactionCtrl.js"></script>
 
